# sboosali.github.io

./: .gitignore  .gitmodules  Makefile  README.md  cabal.project  index.html  shake  shell  shell.nix
bash/: add-submodule  cabal2nix  get-patches  truncate-video  video-crop-space  video-strip-metadata
blog/: FUT.html  FUT.md  PLC.html  TSP.html  TSP.md  widgets.html
css/: address.css  mtg-mana.css  post.css  site.css
docs/: NOTES.md  TODO.txt  old.txt
documentation/enumerate/: Data-CoRec.html  Data-Enumerate-Domain.html  Data-Enumerate-Example.html  Data-Enumerate-Extra.html  Data-Enumerate-Function.html  Data-Enumerate-Large.html  Data-Enumerate-Map.html  Data-Enumerate-Reify.html  Data-Enumerate-Types.html  Data-Enumerate.html  Enumerate-Cardinality.html  Enumerate-Enum.html  Enumerate-Example.html  Enumerate-Types.html  Enumerate.html  doc-index.html  enumerate.haddock  enumerate.txt  index-frames.html  index.html  mini_Data-CoRec.html  mini_Data-Enumerate-Domain.html  mini_Data-Enumerate-Example.html  mini_Data-Enumerate-Extra.html  mini_Data-Enumerate-Function.html  mini_Data-Enumerate-Large.html  mini_Data-Enumerate-Map.html  mini_Data-Enumerate-Reify.html  mini_Data-Enumerate-Types.html  mini_Data-Enumerate.html  mini_Enumerate-Cardinality.html  mini_Enumerate-Enum.html  mini_Enumerate-Example.html  mini_Enumerate-Extra.html  mini_Enumerate-Main.html  mini_Enumerate-Types.html
documentation/enumerate-0.2.1/: Enumerate-Cardinality.html  Enumerate-Example.html  Enumerate-Extra.html  Enumerate-Main.html  Enumerate-Orphans-Large.html  Enumerate.html  enumerate.haddock  enumerate.txt  index.html  mini_Enumerate-Example.html  mini_Enumerate-Orphans-Large.html  mini_Enumerate.html
documentation/enumerate-0.2.1/src/: Enumerate-Cardinality.html  Enumerate-Enum.html  Enumerate-Orphans-Large.html  Enumerate-Types.html  Enumerate.html
documentation/enumerate-function/: Enumerate-Function-Example.html  Enumerate-Function-Map.html  Enumerate-Function-Reify.html  Enumerate-Function-Types.html  Enumerate-Function.html  Enumerate-Orphans-Function.html  enumerate-function.haddock  enumerate-function.txt  index-frames.html  index.html  mini_Enumerate-Function-Example.html  mini_Enumerate-Function-Map.html  mini_Enumerate-Function.html  mini_Enumerate-Orphans-Function.html
documentation/enumerate-function-0.0.0/: Enumerate-Function-Extra.html  Enumerate-Function-Invert.html  doc-index.html  mini_Enumerate-Function-Extra.html  mini_Enumerate-Function-Invert.html  mini_Enumerate-Function-Reify.html  mini_Enumerate-Function-Types.html
documentation/enumerate-function-0.0.0/src/: Enumerate-Function-Extra.html  Enumerate-Function-Map.html  Enumerate-Function-Reify.html  Enumerate-Function.html
documentation/enumerate-function/src/: Enumerate-Function-Example.html  Enumerate-Function-Invert.html  Enumerate-Function-Types.html  Enumerate-Orphans-Function.html
documentation/enumerate/src/: Enumerate-Cardinality.html  Enumerate-Enum.html  Enumerate-Example.html  Enumerate-Extra.html  Enumerate-Main.html  Enumerate-Orphans-Large.html  Enumerate-Types.html  Enumerate.html
documentation/vinyl-effects-0.0.0/: Vinyl-CoRec.html  Vinyl-Effects-Example.html  Vinyl-Effects-Extra.html  Vinyl-Effects-Interpreter-Cofree.html  Vinyl-Effects-Interpreter-Simple.html  Vinyl-Effects-Interpreter.html  Vinyl-Effects-Language.html  Vinyl-Effects-Types.html  Vinyl-Effects.html  doc-index-38.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_Vinyl-CoRec.html  mini_Vinyl-Effects-Example.html  mini_Vinyl-Effects-Extra.html  mini_Vinyl-Effects-Interpreter-Cofree.html  (+7 more)
documentation/vinyl-effects-0.0.0/src/: Vinyl-CoRec.html  Vinyl-Effects-Example.html  Vinyl-Effects-Extra.html  Vinyl-Effects-Interpreter-Cofree.html  Vinyl-Effects-Interpreter-Simple.html  Vinyl-Effects-Interpreter.html  Vinyl-Effects-Language.html  Vinyl-Effects-Types.html  Vinyl-Effects.html
documentation/workflow-osx/: Workflow-OSX-Bindings-Raw.html  Workflow-OSX-Bindings.html  Workflow-OSX-Constants.html  Workflow-OSX-DSL.html  Workflow-OSX-Example.html  Workflow-OSX-Execute.html  Workflow-OSX-Extra.html  Workflow-OSX-Marshall.html  Workflow-OSX-Types.html  Workflow-OSX.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  index-frames.html  (+12 more)
hs/: .dir-locals.el  cabal.project  sboo-io.cabal  sboo-shake.cabal  shake-sboo-io  shake-sboo-io.hs  shake.hs  shell.nix
hs/test/: integration.hs
html/: address.html  copyright.html
js/: main.js
lisp/: sboo-html-convert-curly-braces-to-mana-symbols.el
md/: Counterspells.md  FUT.md  Instants.md  MH1.md  MTG-Fash.md  PLC.md  TSP.md  Vintage.md  instants-vs-color-pie.md  widgets.md
mirror/: boolean-blindness.html  boolean-blindness.md
nix/: environment.nix  nixpkgs.nix  programs.nix
patches/: haxml-1.30.diff  polyparse-1.30.diff
scripts/: get-patches.sh  make-favicons.sh  truncate-video.sh  video-crop-space.sh
text/CC-BY-NC-SA-4.0/: LICENSE
videos/: README.md  crop-pitbull-lullaby.sh  pitbull-lullaby.sh
